Fix scrollbar part 2
Fix scrollbar part 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2453,7 +2453,6 @@ input[type="button"]:disabled,
     color: #d1f1e9;
     font-style: italic;
     margin: 1em 0 0 0;
-    white-space: nowrap;
 }
 
 #header > footer {
@@ -2683,7 +2682,7 @@ input[type="button"]:disabled,
     #header > footer {
         bottom: auto;
         left: auto;
-        margin: 1em 0 0 0;
+        margin: 0.5em 0 0 0;
         position: relative;
         right: auto;
         top: auto;
